--- a/index.html
+++ b/index.html
@@ -1,109 +1,277 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sahil Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sahil — Web Developer</title>
+  <meta name="description" content="Sahil — Web Developer. Frontend, UI/UX & Branding. Portfolio and contact." />
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Icons & Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="#">Sahil</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <nav class="nav" id="nav" aria-label="Main navigation">
+    <div class="nav__brand">
+      <span class="logo" aria-hidden="true">Sahil</span>
+    </div>
+
+    <button class="nav__toggle" id="navToggle" aria-expanded="false" aria-controls="navMenu" aria-label="Toggle navigation">
+      <span class="material-icons">menu</span>
+    </button>
+
+    <div class="nav__links" id="navMenu">
+      <a href="#home" class="nav__link">Home</a>
+      <a href="#about" class="nav__link">About</a>
+      <a href="#skills" class="nav__link">Skills</a>
+      <a href="#services" class="nav__link">Services</a>
+      <a href="#portfolio" class="nav__link">Portfolio</a>
+      <a href="#contact" class="nav__link">Contact</a>
+      <button id="themeToggle" class="icon-btn" aria-pressed="false" title="Toggle dark mode">
+        <span class="material-icons" aria-hidden="true">dark_mode</span>
+        <span class="sr-only">Toggle dark mode</span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-      </div>
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="bg-primary text-white text-center py-5">
-    <div class="container">
-      <h1>Hi, I'm Sahil 👋</h1>
-      <p class="lead">Aspiring Data Analyst | Power BI | SQL | Excel</p>
-      <a href="#projects" class="btn btn-light mt-3">See My Work</a>
+  <header class="hero" id="home" role="banner">
+    <div class="container hero__inner">
+      <div class="hero__content">
+        <h1 class="hero__title">Hi, I'm Sahil</h1>
+        <p class="hero__subtitle">Web Developer — building accessible, responsive interfaces</p>
+        <p class="hero__desc">High level experience in Web Design and Development, producing quality work.</p>
+        <div class="hero__actions">
+          <a class="btn" href="#contact">Contact Me →</a>
+          <a class="btn btn--ghost" href="#portfolio">See Work</a>
+        </div>
+        <p class="hint">Scroll down ⬇</p>
+      </div>
+
+      <div class="hero__image" aria-hidden="true">
+        <!-- Replace sa11.png with your real headshot/illustration -->
+        <img src="sa11.png" alt="Sahil — Web developer portrait" width="320" height="420">
+      </div>
     </div>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">About Me</h2>
-      <p class="text-center">
-        I am a passionate Data Analyst with skills in Power BI, SQL, and Excel.
-        I enjoy solving real-world problems using data visualization and reporting.
-      </p>
-    </div>
-  </section>
+  <main id="main">
+    <section id="about" class="section about">
+      <div class="container">
+        <h2 class="section__title">About me</h2>
+        <p class="section__lead">My introduction</p>
 
-  <!-- Projects Section -->
-  <section id="projects" class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center mb-4">Projects</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card shadow-sm mb-4">
-            <div class="card-body">
-              <h5 class="card-title">📊 Power BI Report</h5>
-              <p class="card-text">Interactive sales dashboard built in Power BI.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
-            </div>
+        <div class="about__grid">
+          <div class="about__image-wrap">
+            <img src="sa12.png" alt="Sahil working on a laptop" width="420" height="360">
           </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm mb-4">
-            <div class="card-body">
-              <h5 class="card-title">💾 SQL Analysis</h5>
-              <p class="card-text">Performed SQL queries for business insights.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card shadow-sm mb-4">
-            <div class="card-body">
-              <h5 class="card-title">📑 Excel Report</h5>
-              <p class="card-text">Automated Excel reports with pivot tables and charts.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+
+          <div>
+            <p class="about__text">
+              Web developer with extensive knowledge and years of experience in web technologies and UI/UX design, delivering quality work.
+            </p>
+
+            <div class="about__stats" aria-hidden="false">
+              <div class="stat">
+                <strong>02+</strong>
+                <span>years experience</span>
+              </div>
+              <div class="stat">
+                <strong>06+</strong>
+                <span>completed projects</span>
+              </div>
+              <div class="stat">
+                <strong>00+</strong>
+                <span>companies worked</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="py-5">
-    <div class="container">
-      <h2 class="text-center mb-4">Contact Me</h2>
-      <p class="text-center">Feel free to reach out via email or LinkedIn.</p>
-      <div class="text-center">
-        <a href="mailto:youremail@example.com" class="btn btn-dark me-2">Email</a>
-        <a href="https://linkedin.com/in/yourlinkedin" target="_blank" class="btn btn-primary">LinkedIn</a>
+    <section id="skills" class="section skills">
+      <div class="container">
+        <h2 class="section__title">Skills</h2>
+
+        <div class="accordion" id="skillsAccordion">
+          <div class="accordion__item">
+            <button class="accordion__btn" data-target="frontend">
+              {} Frontend Developer <span class="chev">▾</span>
+            </button>
+            <div class="accordion__panel" id="frontend" aria-hidden="true">
+              <div class="skill-row"><span>HTML</span><div class="bar"><div class="bar__fill" style="width:70%"></div></div><span>70%</span></div>
+              <div class="skill-row"><span>CSS</span><div class="bar"><div class="bar__fill" style="width:50%"></div></div><span>50%</span></div>
+              <div class="skill-row"><span>JavaScript</span><div class="bar"><div class="bar__fill" style="width:10%"></div></div><span>10%</span></div>
+            </div>
+          </div>
+
+          <div class="accordion__item">
+            <button class="accordion__btn" data-target="backend">
+              ! Backend Developer <span class="chev">▾</span>
+            </button>
+            <div class="accordion__panel" id="backend" aria-hidden="true">
+              <p>In progress — currently focusing on frontend & design.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="services" class="section services">
+      <div class="container">
+        <h2 class="section__title">Services</h2>
+        <p class="section__lead">What I offer</p>
+
+        <div class="cards">
+          <article class="card">
+            <h3>UI / UX Design</h3>
+            <p>Designing intuitive interfaces and prototypes.</p>
+            <button class="link" data-modal="modal-1">View More →</button>
+          </article>
+
+          <article class="card">
+            <h3>Frontend Development</h3>
+            <p>Responsive websites using modern HTML/CSS/JS.</p>
+            <button class="link" data-modal="modal-2">View More →</button>
+          </article>
+
+          <article class="card">
+            <h3>Branding</h3>
+            <p>Logo, visual identity and simple brand systems.</p>
+            <button class="link" data-modal="modal-3">View More →</button>
+          </article>
+        </div>
+      </div>
+
+      <!-- Simple modal structure (reused) -->
+      <div class="modal" id="modal-1" role="dialog" aria-hidden="true" aria-labelledby="modal-1-title">
+        <div class="modal__panel">
+          <button class="modal__close" data-close>&times;</button>
+          <h3 id="modal-1-title">UI / UX Design</h3>
+          <p>Update in progress, will be updated soon.</p>
+        </div>
+      </div>
+      <div class="modal" id="modal-2" role="dialog" aria-hidden="true" aria-labelledby="modal-2-title">
+        <div class="modal__panel">
+          <button class="modal__close" data-close>&times;</button>
+          <h3 id="modal-2-title">Frontend Development</h3>
+          <p>Update in progress, will be updated soon.</p>
+        </div>
+      </div>
+      <div class="modal" id="modal-3" role="dialog" aria-hidden="true" aria-labelledby="modal-3-title">
+        <div class="modal__panel">
+          <button class="modal__close" data-close>&times;</button>
+          <h3 id="modal-3-title">Branding</h3>
+          <p>Update in progress, will be updated soon.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio" class="section portfolio">
+      <div class="container">
+        <h2 class="section__title">Portfolio</h2>
+        <p class="section__lead">Most recent work</p>
+
+        <div class="project">
+          <div class="project__media">
+            <img src="great.png" alt="Modern Website screenshot" width="420" height="320">
+          </div>
+          <div class="project__content">
+            <h3>Modern Website</h3>
+            <p>Website adaptable to all devices with UI components and animated interactions.</p>
+            <a class="btn" href="https://greatknowledge.rf.gd" target="_blank" rel="noopener">Demo →</a>
+          </div>
+        </div>
+
+        <div class="cta-quote">
+          <div class="cta">
+            <h3>You have a new project</h3>
+            <p>Contact me now and get a 30% discount on your new project.</p>
+            <a class="btn" href="#contact">Contact Me →</a>
+          </div>
+          <div class="cta__image">
+            <img src="https://play-lh.googleusercontent.com/et8EtWAtpmeODd9DWvwQ3LXUTo5TThnuFgfENMYiXBDzfHevSheWe1OnrlqOfbxV7r6D" alt="Illustration" width="160" height="200">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="section contact">
+      <div class="container">
+        <h2 class="section__title">Contact me</h2>
+        <p class="section__lead">Get in touch</p>
+
+        <div class="contact__grid">
+          <div class="contact__info" aria-label="Contact details">
+            <div class="contact-item">
+              <img src="https://cdn.iconscout.com/icon/free/png-64/call-418-435823.png" alt="" width="24" height="24">
+              <div><strong>Call</strong><br><span>7087xxxxxx</span></div>
+            </div>
+
+            <div class="contact-item">
+              <img src="https://cdn.iconscout.com/icon/free/png-64/message-2451551-2082536.png" alt="" width="24" height="24">
+              <div><strong>Email</strong><br><span>sahilsandhu7655@gmail.com</span></div>
+            </div>
+
+            <div class="contact-item">
+              <img src="https://cdn.iconscout.com/icon/free/png-64/location-4083026-3377334.png" alt="" width="24" height="24">
+              <div><strong>Location</strong><br><span>Chheharta</span></div>
+            </div>
+          </div>
+
+          <form id="contactForm" class="contact__form" novalidate>
+            <label class="sr-only" for="name">Name</label>
+            <input id="name" name="name" type="text" placeholder="Name" required>
+
+            <label class="sr-only" for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="Email" required>
+
+            <label class="sr-only" for="project">Project</label>
+            <input id="project" name="project" type="text" placeholder="Project">
+
+            <label class="sr-only" for="message">Message</label>
+            <textarea id="message" name="message" rows="6" placeholder="Message" required></textarea>
+
+            <div class="form__actions">
+              <button class="btn" type="submit">Send Message →</button>
+            </div>
+
+            <p id="formStatus" class="form-status" aria-live="polite"></p>
+          </form>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container footer__inner">
+      <div>
+        <h3 class="footer__brand">Sahil</h3>
+        <p class="muted">Web Developer</p>
+      </div>
+
+      <nav aria-label="Footer" class="footer__nav">
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
+
+      <div class="socials">
+        <a href="#" aria-label="Facebook"><img src="https://cdn.iconscout.com/icon/free/png-64/facebook-3660042-3094476.png" alt="Facebook" width="40" height="40"></a>
+        <a href="#" aria-label="Instagram"><img src="https://cdn.iconscout.com/icon/free/png-64/instagram-63-189784.png" alt="Instagram" width="40" height="40"></a>
+        <a href="#" aria-label="WhatsApp"><img src="https://cdn.iconscout.com/icon/free/png-64/whatsapp-40-189779.png" alt="WhatsApp" width="40" height="40"></a>
       </div>
     </div>
-  </section>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">© 2025 Sahil. All Rights Reserved.</p>
+    <div class="container footer__copy">
+      <small>&copy; <span id="year"></span> Sahil — All rights reserved.</small>
+    </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
