--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sahil — Web Developer</title>
-  <meta name="description" content="Sahil — Web Developer. Frontend, UI/UX & Branding. Portfolio and contact." />
+  <title>Sahil — Data Analyst</title>
+  <meta name="description" content="Sahil — Data Analyst. Power BI, SQL, Python & Excel Portfolio and contact." />
 
   <!-- Icons & Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
@@ -42,8 +42,8 @@
     <div class="container hero__inner">
       <div class="hero__content">
         <h1 class="hero__title">Hi, I'm Sahil</h1>
-        <p class="hero__subtitle">Web Developer — building accessible, responsive interfaces</p>
-        <p class="hero__desc">High level experience in Web Design and Development, producing quality work.</p>
+        <p class="hero__subtitle">Data Analyst — turning raw data into meaningful insights</p>
+        <p class="hero__desc">Proficient in Power BI, SQL, Python, and Excel. Experienced in building dashboards, reports, and data-driven solutions that help businesses make smarter decisions.</p>
         <div class="hero__actions">
           <a class="btn" href="#contact">Contact Me →</a>
           <a class="btn btn--ghost" href="#portfolio">See Work</a>
@@ -52,8 +52,7 @@
       </div>
 
       <div class="hero__image" aria-hidden="true">
-        <!-- Replace sa11.png with your real headshot/illustration -->
-        <img src="sa11.png" alt="Sahil — Web developer portrait" width="320" height="420">
+        <img src="sa11.png" alt="Sahil — Data Analyst portrait" width="320" height="420">
       </div>
     </div>
   </header>
@@ -66,12 +65,12 @@
 
         <div class="about__grid">
           <div class="about__image-wrap">
-            <img src="sa12.png" alt="Sahil working on a laptop" width="420" height="360">
+            <img src="sa12.png" alt="Sahil working on a dashboard" width="420" height="360">
           </div>
 
           <div>
             <p class="about__text">
-              Web developer with extensive knowledge and years of experience in web technologies and UI/UX design, delivering quality work.
+              Data Analyst with strong expertise in Power BI, SQL, Python, and Excel. Skilled in transforming complex datasets into clear, actionable insights and interactive dashboards to support business decisions.
             </p>
 
             <div class="about__stats" aria-hidden="false">
@@ -80,12 +79,12 @@
                 <span>years experience</span>
               </div>
               <div class="stat">
-                <strong>06+</strong>
-                <span>completed projects</span>
+                <strong>10+</strong>
+                <span>data projects completed</span>
               </div>
               <div class="stat">
-                <strong>00+</strong>
-                <span>companies worked</span>
+                <strong>05+</strong>
+                <span>business domains</span>
               </div>
             </div>
           </div>
@@ -99,22 +98,23 @@
 
         <div class="accordion" id="skillsAccordion">
           <div class="accordion__item">
-            <button class="accordion__btn" data-target="frontend">
-              {} Frontend Developer <span class="chev">▾</span>
+            <button class="accordion__btn" data-target="analytics">
+              📊 Data Analytics <span class="chev">▾</span>
             </button>
-            <div class="accordion__panel" id="frontend" aria-hidden="true">
-              <div class="skill-row"><span>HTML</span><div class="bar"><div class="bar__fill" style="width:70%"></div></div><span>70%</span></div>
-              <div class="skill-row"><span>CSS</span><div class="bar"><div class="bar__fill" style="width:50%"></div></div><span>50%</span></div>
-              <div class="skill-row"><span>JavaScript</span><div class="bar"><div class="bar__fill" style="width:10%"></div></div><span>10%</span></div>
+            <div class="accordion__panel" id="analytics" aria-hidden="true">
+              <div class="skill-row"><span>Power BI</span><div class="bar"><div class="bar__fill" style="width:85%"></div></div><span>85%</span></div>
+              <div class="skill-row"><span>SQL</span><div class="bar"><div class="bar__fill" style="width:80%"></div></div><span>80%</span></div>
+              <div class="skill-row"><span>Python</span><div class="bar"><div class="bar__fill" style="width:70%"></div></div><span>70%</span></div>
+              <div class="skill-row"><span>Excel</span><div class="bar"><div class="bar__fill" style="width:75%"></div></div><span>75%</span></div>
             </div>
           </div>
 
           <div class="accordion__item">
-            <button class="accordion__btn" data-target="backend">
-              ! Backend Developer <span class="chev">▾</span>
+            <button class="accordion__btn" data-target="dataviz">
+              📈 Data Visualization <span class="chev">▾</span>
             </button>
-            <div class="accordion__panel" id="backend" aria-hidden="true">
-              <p>In progress — currently focusing on frontend & design.</p>
+            <div class="accordion__panel" id="dataviz" aria-hidden="true">
+              <p>Interactive dashboards, reports, KPI tracking, and data storytelling with Power BI and Excel.</p>
             </div>
           </div>
         </div>
@@ -128,45 +128,22 @@
 
         <div class="cards">
           <article class="card">
-            <h3>UI / UX Design</h3>
-            <p>Designing intuitive interfaces and prototypes.</p>
+            <h3>Data Visualization</h3>
+            <p>Designing interactive dashboards and reports in Power BI & Excel.</p>
             <button class="link" data-modal="modal-1">View More →</button>
           </article>
 
           <article class="card">
-            <h3>Frontend Development</h3>
-            <p>Responsive websites using modern HTML/CSS/JS.</p>
+            <h3>Data Analysis</h3>
+            <p>SQL & Python for data cleaning, exploration, and insights generation.</p>
             <button class="link" data-modal="modal-2">View More →</button>
           </article>
 
           <article class="card">
-            <h3>Branding</h3>
-            <p>Logo, visual identity and simple brand systems.</p>
+            <h3>Business Insights</h3>
+            <p>Delivering actionable insights to support decision-making processes.</p>
             <button class="link" data-modal="modal-3">View More →</button>
           </article>
-        </div>
-      </div>
-
-      <!-- Simple modal structure (reused) -->
-      <div class="modal" id="modal-1" role="dialog" aria-hidden="true" aria-labelledby="modal-1-title">
-        <div class="modal__panel">
-          <button class="modal__close" data-close>&times;</button>
-          <h3 id="modal-1-title">UI / UX Design</h3>
-          <p>Update in progress, will be updated soon.</p>
-        </div>
-      </div>
-      <div class="modal" id="modal-2" role="dialog" aria-hidden="true" aria-labelledby="modal-2-title">
-        <div class="modal__panel">
-          <button class="modal__close" data-close>&times;</button>
-          <h3 id="modal-2-title">Frontend Development</h3>
-          <p>Update in progress, will be updated soon.</p>
-        </div>
-      </div>
-      <div class="modal" id="modal-3" role="dialog" aria-hidden="true" aria-labelledby="modal-3-title">
-        <div class="modal__panel">
-          <button class="modal__close" data-close>&times;</button>
-          <h3 id="modal-3-title">Branding</h3>
-          <p>Update in progress, will be updated soon.</p>
         </div>
       </div>
     </section>
@@ -178,19 +155,19 @@
 
         <div class="project">
           <div class="project__media">
-            <img src="great.png" alt="Modern Website screenshot" width="420" height="320">
+            <img src="great.png" alt="Power BI Dashboard Screenshot" width="420" height="320">
           </div>
           <div class="project__content">
-            <h3>Modern Website</h3>
-            <p>Website adaptable to all devices with UI components and animated interactions.</p>
-            <a class="btn" href="https://greatknowledge.rf.gd" target="_blank" rel="noopener">Demo →</a>
+            <h3>Power BI Sales Dashboard</h3>
+            <p>Interactive sales dashboard tracking KPIs, revenue trends, and customer insights with drill-through analysis.</p>
+            <a class="btn" href="#" target="_blank" rel="noopener">View Demo →</a>
           </div>
         </div>
 
         <div class="cta-quote">
           <div class="cta">
-            <h3>You have a new project</h3>
-            <p>Contact me now and get a 30% discount on your new project.</p>
+            <h3>Need insights from your data?</h3>
+            <p>Contact me today and let’s turn your raw data into powerful business solutions.</p>
             <a class="btn" href="#contact">Contact Me →</a>
           </div>
           <div class="cta__image">
@@ -251,7 +228,7 @@
     <div class="container footer__inner">
       <div>
         <h3 class="footer__brand">Sahil</h3>
-        <p class="muted">Web Developer</p>
+        <p class="muted">Data Analyst</p>
       </div>
 
       <nav aria-label="Footer" class="footer__nav">
